Overflow fix 1

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ html, body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     color: white;
+    overflow: hidden;
 }
 
 nav{
